
2025-04-22
Update enchant data.
Color meta gem.
Color item set.

2025-04-10
Update toc for classic era.

2025-04-08
Recevie addon message via tdInspect channel.
Update libs.

2025-04-02
Update scroll lib.